tests/errors/bad_call.s

# Calling a bad address
main:
    call 100

